Added two testcase

--- a/Automation/Globalproperty.properties
+++ b/Automation/Globalproperty.properties
@@ -1,3 +1,5 @@
-base=https://reqres.in
-endpoint=/api/users?page=2
+baseURI=https://reqres.in
+LISTUSERS=/api/users?page=2
+SINGLEUSER=/api/users2
+CREATEUSER=/api/users
 contentType=application/json
