--- a/.github/workflows/API_Execution.yml
+++ b/.github/workflows/API_Execution.yml
@@ -22,7 +22,7 @@ jobs:
         steps:
             - name: build with maven
               
-              working-directory: "./Automation"
+              working-directory: "/Automation"
               run: mvn clean
     TestExecution:
         needs: BuildProject
