--- a/.github/workflows/executino.yml
+++ b/.github/workflows/executino.yml
@@ -17,7 +17,8 @@ jobs:
                   cache: maven
             - run: mvn --version
             - name: build with maven
+              working-directory: ${GITHUB_WORKSPACE}
               run: |
-                pwd
+                echo  ${GITHUB_WORKSPACE}
                 mvn clean
    
