--- a/.github/workflows/executino.yml
+++ b/.github/workflows/executino.yml
@@ -8,8 +8,8 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - uses: actions/checkout@v4
-            - name: Setup java JDK 17'
+            - uses: actions/checkout@v3
+            - name: Set up java JDK 17'
               uses: actions/setup-java@v3
               with:
                   java-version: '17'
@@ -17,8 +17,6 @@ jobs:
                   cache: maven
             - run: mvn --version
             - name: build with maven
-            
-              run: |
-                echo  ${GITHUB_WORKSPACE}
-                mvn clean
+              working-directory: "./API-Automation-Java/Automation"
+              run: mvn clean
    
