--- a/.github/workflows/executino.yml
+++ b/.github/workflows/executino.yml
@@ -17,7 +17,7 @@ jobs:
                   cache: maven
             - run: mvn --version
             - name: build with maven
-             
+              working-directory: "/Automation"
               run: |
                 ls
                 pwd
