--- a/.github/workflows/executino.yml
+++ b/.github/workflows/executino.yml
@@ -20,6 +20,5 @@ jobs:
               
               run: |
                 cd Automation
-                ls
-                pwd
+                mvn clean
    
