--- a/.github/workflows/executino.yml
+++ b/.github/workflows/executino.yml
@@ -21,4 +21,7 @@ jobs:
               run: |
                 cd Automation
                 mvn clean
+            - name: Testcase execution
+              run: mvn test -DsuiteXmlFile=testng.xml -Dmaven.test.failure.ignore=true -fae
+  
    
