--- a/.github/workflows/executino.yml
+++ b/.github/workflows/executino.yml
@@ -2,7 +2,7 @@ name: API Test Execution
 
 on:
     push: 
-        branches: ["main"]
+        branches: ["ss"]
 jobs:
     SettingupEnv:
         runs-on: ubuntu-latest
