--- a/.github/workflows/API_Execution.yml
+++ b/.github/workflows/API_Execution.yml
@@ -20,6 +20,11 @@ jobs:
         needs: SettingupEnv
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-java@v3
+              with:
+                java-version: '17'
+                distribution: 'zulu'
             - name: build with maven
               run: |
                 ls
@@ -29,6 +34,11 @@ jobs:
         needs: BuildProject
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-java@v3
+              with:
+                java-version: '17'
+                distribution: 'zulu'
             - name: Testcase execution
               run: |
                 ls
