--- a/.github/workflows/API_Execution.yml
+++ b/.github/workflows/API_Execution.yml
@@ -46,10 +46,11 @@ jobs:
                 mvn test -DsuiteXmlFile=testng.xml -Dmaven.test.failure.ignore=true -fae
             - name: upload Report
               if: always()
-              uses: actions/upload-artifacts@v2
+              run: |
+                    ls
+            - uses: actions/upload-artifacts@v2
               with:
                 name: test-report
-                run: |
-                    ls
+                path: "./Extent"
 
 
