--- a/.github/workflows/API_Execution.yml
+++ b/.github/workflows/API_Execution.yml
@@ -47,6 +47,8 @@ jobs:
             - name: upload Report
               run: |
                 ls
+                cd Automation
+                ls
               if: always()
             - uses: actions/upload-artifact@v2
               with:
