--- a/.github/workflows/API_Execution.yml
+++ b/.github/workflows/API_Execution.yml
@@ -56,7 +56,7 @@ jobs:
             - uses: actions/upload-artifact@v2
               with:
                 name: test-report
-                path: "./Extent"
+                path: "/home/runner/work/API-Automation-Java/API-Automation-Java/Automation/Extent/"
                 
 
 
